--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@ avatar: https://avatars2.githubusercontent.com/u/4825756?v=1&amp;s=140
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: 
+  email: floriano76@gmail.com
   facebook: 
   flickr: 
-  github: barryclark/jekyll-now
+  github: floriano76/jekyll-now
   instagram: 
-  linkedin: 
+  linkedin: floriano76
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: jekyllrb
+  twitter: floriano76
 
 # Your disqus shortname, entering this will enable commenting on posts
 disqus: 
