--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://avatars2.githubusercontent.com/u/4825756?v=1&amp;s=140
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: floriano76@gmail.com
+  email: 
   facebook: 
   flickr: 
   github: floriano76/jekyll-now
