--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ footer-links:
   email: 
   facebook: 
   flickr: 
-  github: floriano76/jekyll-now
+  github: floriano76
   instagram: 
-  linkedin: floriano76
+  linkedin: 
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: floriano76
