--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Floriano Oliveira
 description: Web Developer from Brazil
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars2.githubusercontent.com/u/4825756?v=1&amp;s=140
+avatar: 'https://avatars2.githubusercontent.com/u/4825756?v=1&amp;s=140'
 
 
 #
