--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ footer-links:
   email: 
   facebook: 
   flickr: 
-  github: floriano76
+  github: 
   instagram: 
   linkedin: 
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: floriano76
+  twitter: 
 
 # Your disqus shortname, entering this will enable commenting on posts
 disqus: 
