--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@ avatar: 'https://avatars2.githubusercontent.com/u/4825756?v=1&amp;s=140'
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: 
-  facebook: 
+  email: floriano76@gmail.com
+  facebook: floriano76
   flickr: 
-  github: 
-  instagram: 
-  linkedin: 
+  github: floriano76
+  instagram: floriano76
+  linkedin: floriano76
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: 
+  twitter: floriano76
 
 # Your disqus shortname, entering this will enable commenting on posts
 disqus: 
